--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,10 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
-  "endOfLine": "lf"
+	"singleQuote": true,
+	"trailingComma": "all",
+	"endOfLine": "lf",
+	"tabWidth": 2,
+	"arrowParens": "avoid",
+	"semi": false,
+	"trailingComa": "none",
+	"useTabs": true
 }
